# project-dashboard-electrische-kart-the-bread-boys

./: .env  .gitignore  Aantekeningen.docx  Handleiding kart dashboard.docx  LICENSE  README.md  package-lock.json  package.json  project electrishe kart the bread boys daily.docx  ~$oject electrishe kart the bread boys daily.docx  ~WRL0004.tmp
.github/workflows/: docker-image.yml
kart-dashboard/: package-lock.json  package.json
kart-dashboard-backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml  kart.sql  package-lock.json  package.json  tsconfig.json
kart-dashboard-backend-rewrite/: .env  Cargo.toml  speedtest.ps1
kart-dashboard-backend-rewrite/src/: main.rs
kart-dashboard-backend-rewrite/src/components/: api.rs  database.rs  logger.rs
kart-dashboard-backend/classes/: database.ts
kart-dashboard-backend/src/: index.ts  main.rs
kart-dashboard-backend/src/components/: api.rs  database.rs  mod.rs
kart-dashboard-backend/src/database/: database.ts  logger.ts
kart-dashboard-client/: .env  Dockerfile  compose.yaml  nginx.conf  package-lock.json  package.json
kart-dashboard-client/src/: App.css  App.js  index.js
kart-dashboard-client/src/backend/: Backendconnection.ts  logger.ts
kart-dashboard-client/src/components/: BarChart.js  MultiLineChart.js
kart-dashboard/src/: App.css  App.js
