[package]
name = "kart-dashboard-backend-rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
influxdb = { version = "0.7.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
